[metadata]
name = neuroconv
description = Extract metadata from Bonsai outputs
long_description = file:README.md
long_description_content_type = text/markdown
author = DANDI Contributors
author_email = team@dandiarchive.org
license = Apache-2.0
license_files = LICENSE
url = https://github.com/dandi/neuroconv

keywords =
    ###

classifiers =
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    #Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: Apache Software License
    ###

project_urls =
    Source Code = https://github.com/dandi/neuroconv
    Bug Tracker = https://github.com/dandi/neuroconv/issues

[options]
packages = find:
package_dir=
    =src
python_requires = ~=3.6
install_requires =
    BeautifulSoup4
    lxml
    numpy
    pandas
    python-dateutil
    spikeextractors

[options.extras_require]
extensions =
    pynwb

[options.packages.find]
where = src

[versioneer]
VCS = git
style = pep440
versionfile_source = src/neuroconv/_version.py
versionfile_build = neuroconv/_version.py
tag_prefix =
parentdir_prefix =
